[gd_scene load_steps=7 format=2]

[ext_resource path="res://level/select/level_select.gd" type="Script" id=1]
[ext_resource path="res://ui/sprite/cross.png" type="Texture" id=2]
[ext_resource path="res://ui/ui_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/redkost-comic/Redkost Comic.otf" type="DynamicFontData" id=4]
[ext_resource path="res://level/select/background.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 4 )

[node name="LevelSelect" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.40284, 1.40284 )
texture = ExtResource( 5 )
centered = false

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -69.4119
margin_top = -42.7148
margin_right = 1988.59
margin_bottom = 1135.29
color = Color( 0.101563, 0.0825195, 0.0825195, 0.501961 )

[node name="UIRoot" type="HBoxContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.923
margin_left = -0.399998
margin_top = 0.4
margin_right = -0.600098
margin_bottom = 0.159973
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="UIRoot"]
margin_bottom = 974.0
size_flags_stretch_ratio = 1.5
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot/VSplitContainer"]
visible = false
margin_right = 413.0
margin_bottom = 427.0

[node name="BagButton" type="Button" parent="UIRoot/VSplitContainer/VBoxContainer"]
margin_right = 413.0
margin_bottom = 211.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
disabled = true
text = "capture"

[node name="StoryButton" type="Button" parent="UIRoot/VSplitContainer/VBoxContainer"]
margin_top = 215.0
margin_right = 413.0
margin_bottom = 427.0
size_flags_horizontal = 9
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "story"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UIRoot/VSplitContainer"]
margin_bottom = 974.0

[node name="VBoxContainer" type="VBoxContainer" parent="UIRoot"]
margin_left = 4.0
margin_right = 1731.0
margin_bottom = 974.0
size_flags_horizontal = 3

[node name="levelSelect" type="Label" parent="UIRoot/VBoxContainer"]
margin_right = 1727.0
margin_bottom = 135.0
custom_fonts/font = ExtResource( 3 )
text = "Level Select"
align = 1

[node name="LevelSelectButtons" type="HBoxContainer" parent="UIRoot/VBoxContainer"]
margin_top = 139.0
margin_right = 1727.0
margin_bottom = 527.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="level1" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons"]
margin_right = 428.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons/level1"]
margin_left = 30.0
margin_right = 398.0
margin_bottom = 388.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "1"

[node name="level2" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons"]
margin_left = 432.0
margin_right = 861.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons/level2"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "2"

[node name="level3" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons"]
margin_left = 865.0
margin_right = 1294.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons/level3"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "3"

[node name="level4" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons"]
margin_left = 1298.0
margin_right = 1727.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level4" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons/level4"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 388.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "4"

[node name="gap" type="Panel" parent="UIRoot/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 531.0
margin_right = 1727.0
margin_bottom = 581.0
rect_min_size = Vector2( 0, 50 )

[node name="LevelSelectButtons2" type="HBoxContainer" parent="UIRoot/VBoxContainer"]
margin_top = 585.0
margin_right = 1727.0
margin_bottom = 974.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="level5" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons2"]
margin_right = 428.0
margin_bottom = 389.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level5" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons2/level5"]
margin_left = 30.0
margin_right = 398.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "5"

[node name="level6" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons2"]
margin_left = 432.0
margin_right = 861.0
margin_bottom = 389.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level6" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons2/level6"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "6"

[node name="level7" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons2"]
margin_left = 865.0
margin_right = 1294.0
margin_bottom = 389.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level7" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons2/level7"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "7"

[node name="level8" type="MarginContainer" parent="UIRoot/VBoxContainer/LevelSelectButtons2"]
margin_left = 1298.0
margin_right = 1727.0
margin_bottom = 389.0
size_flags_horizontal = 3
custom_constants/margin_right = 30
custom_constants/margin_left = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level8" type="Button" parent="UIRoot/VBoxContainer/LevelSelectButtons2/level8"]
margin_left = 30.0
margin_right = 399.0
margin_bottom = 389.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "8"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UIRoot"]
margin_left = 1735.0
margin_right = 1843.0
margin_bottom = 974.0
alignment_vertical = 0

[node name="Settings" type="Button" parent="UIRoot/AspectRatioContainer"]
margin_right = 108.0
margin_bottom = 108.0
size_flags_horizontal = 9
size_flags_vertical = 9
icon = ExtResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
